--- a/product-service/package.json
+++ b/product-service/package.json
@@ -20,7 +20,8 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "mongoose": "^8.18.0",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "redis": "^4.6.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
